=== v0.1.44 ===
- TODO

=== v0.1.43 ===
- Initial changelog
- Add all the features!
- Bitcoin Core
- Lightning Daemon
- Electrum Server
- VPN
- Tor
- LND Hub
- LND Connect
- RTL
- LND Admin
- Set LND Alias
- Monitor LND / Bitcoin Status
- Bitcoin Explorer
- Bitcoin CLI
- Device Status
- QuickSync
- Drive Management
- More...