@@ -1,5 +1,6 @@
 === v0.1.44 ===
-- TODO
+- Add changelog to settings page
+- Add shutdown option on settings page
 
 === v0.1.43 ===
 - Initial changelog
